--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <title>lAB02</title>
 </head>
 <body>
+<div>losowy tekst</div>
+<span>span</span> 
+<p>p</p> //obiekt blokowy,margines 
 
-
+<span>span1</span><span>span2</span><span>span3</span>
+<div>div1</div>
+<div>div2</div>
+<p>p1</p>
+<p>p2</p>
 
 </body>
 </html>
