--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
 <title>lAB02</title>
 </head>
 <body>
+<div>losowy tekst</div>
+<span>span</span> 
+<p>p</p> //obiekt blokowy,margines 
 
-
+<span>span1</span><span>span2</span><span>span3</span>
+<div>div1</div>
+<div>div2</div>
+<p>p1</p>
+<p>p2</p>
+<div id="txt">
+Lorem ipsum dolor sit amet consectetur adipisicing elit.
+ Quibusdam earum architecto sit ullam minima maxime impedit ducimus sed dicta sequi id facilis porro, repudiandae nam?
+ Rem voluptatem voluptatibus aperiam saepe!
+<br>
+lol
+<p>hej hej mala</p>
+</div>
 
 </body>
 </html>
