--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
 <p>p1</p>
 <p>p2</p>
 <div id="txt">
-Lorem ipsum dolor sit amet consectetur adipisicing elit.
+<b>Lorem</b> <u>ipsum</u> <i>color</i> sit amet consectetur adipisicing elit.
  Quibusdam earum architecto sit ullam minima maxime impedit ducimus sed dicta sequi id facilis porro, repudiandae nam?
  Rem voluptatem voluptatibus aperiam saepe!
 <br>
 lol
 <p>hej hej mala</p>
 </div>
+<!-- H${NAGŁÓWEK H$}*6-->
+<h1>nagłowek h1 </h1>
+<h1>nagłówek h1</h1>
+<h2>nagłówek h2</h2>
+<h3>nagłówek h3</h3>
+<h4>nagłówek h4</h4>
+<h5>nagłówek h5</h5>
+<h6>nagłówek h6</h6>
+
+<!-- OBRAZY -->
+<img src="" alt="">
 
 </body>
 </html>
